--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.25.17"
   },
   "devDependencies": {
